--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <div class="social-links">
         <a href="https://twitter.com/babuiyaaa" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="https://facebook.com/Rubelliumm" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://facebook.com/rubelliumm" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://instagram.com/rubelliumm" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://linkedin.com/rubelliumm" class="linkedin"><i class="bi bi-linkedin"></i></a>
         <a href="https://github.com/rubelliumm" class="linkedin"><i class="bi bi-github"></i></a>
