updated navbar css

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link active" href="#header">Home</a></li>
-          <li><a class="nav-link" href="#about">About</a></li>
-          <li><a class="nav-link" href="#resume">Resume</a></li>
-          <li><a class="nav-link" href="#services">Photo Galary</a></li>
-          <li><a class="nav-link" href="#contact">Contact</a></li>
+          <li><a class="nav-link active" href="#header"><b>Home</b></a></li>
+          <li><a class="nav-link" href="#about"><b>About</b></a></li>
+          <li><a class="nav-link" href="#resume"><b>Resume</b></a></li>
+          <li><a class="nav-link" href="#services"><b>Photo Galary</b></a></li>
+          <li><a class="nav-link" href="#contact"><b>Contact</b></a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
