--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Md. Rubel Hossain</h3>
           <p class="fst-italic">
-            Hello there, Rubelliumm here! My name is Rubel.I'm from Chattogram,Bangladesh.
+            Hello there, Rubelliumm here!
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>28 november ****</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>rubelliumm.wordpress.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>portfolio-rubelliumm.herokuapp.com/</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+880 183 2222 758</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Chattogram, Bangladesh</span></li>
               </ul>
@@ -210,19 +210,19 @@
             <h4>Primary</h4>
             <h5>2001 - 2006</h5>
             <p><em>পশ্চিম পেচুলিয়া সঃ প্রাথমিক বিদ্যালয়</em></p>
-            <p>প্রাইমারি জীবন ও ছোটবেলা টা এখানে কাটিয়েছি।</p>
+            <p>প্রাইমারি জীবন।</p>
           </div>
           <div class="resume-item">
             <h4>Higher Secondary</h4>
             <h5>2006 - 2007</h5>
             <p><em>মঙ্গলবাড়ী সিরাজীয়া উচ্চ মাধ্যমিক বিদ্যালয়</em></p>
-            <p>ষষ্ঠ শ্রেনি টা এখানে কাটিয়ে দিয়েছি...</p>
+            <p>class 6.</p>
           </div>
           <div class="resume-item">
             <h4>Higher Secondary</h4>
             <h5>2007 - 2012</h5>
             <p><em>আগ্রাবাদ সরকারি কলোনি সরকারি উচ্চ বিদ্যালয়।</em></p>
-            <p>ক্লাস সেভেন থেকে মেট্রিক পরীক্ষা পর্যন্ত এই স্কুলে কাটিয়েছি।</p>
+            <p>class 7 - class 10.</p>
           </div>
           <div class="resume-item">
             <h4>Intermideate</h4>
@@ -234,13 +234,13 @@
             <h4>Bachelor of Science</h4>
             <h5>2016 - 2019</h5>
             <p><em>University of Chittagong.</em></p>
-            <p>My versity life belongs to here...</p>
+            <p>Versity life belongs to here...</p>
           </div>
           <div class="resume-item">
             <h4>Masters Degree</h4>
             <h5>2019 - 2020</h5>
             <p><em>University of Chittagong</em></p>
-            <p>Masters running here...</p>
+            <p>Masters running...>></p>
           </div>
         </div>
         <div class="col-lg-6">
