--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Rubelliumm...</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Hello, I'm Rubel Hossain. I'm a self learner,freelancer and technology enthusiast. Currently learning about SPYWARE." name="description">
+  <meta content="Rubelliumm, rubelliumm, Rubel Hossain, rubel hossain, Rubel hossain, রুবেল, রুবেল হোসেন, রুবেলিয়াম," name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -35,10 +35,10 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="./assets/myApp.apk">Md. Rubel Hossain</a></h1>
+      <h1><a href="index.html">Md. Rubel Hossain</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>Hello there, I'm  <span><a href="./assets/myApp.apk">Rubel Hossain</a></span></span> from Chattogram, Bangladesh.</h2>
+      <h2>Hello there, I'm  <span><a href="index.html">Rubel Hossain</a></span></span> from Chattogram, Bangladesh.</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -86,7 +86,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>28 november ****</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>portfolio-rubelliumm.herokuapp.com/</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>portfolio-rubelliumm.herokuapp.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+880 183 2222 758</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Chattogram, Bangladesh</span></li>
               </ul>
@@ -95,7 +95,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Science</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rubel.me@protonmail.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rubelliumm@proton.me</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
@@ -245,6 +245,17 @@
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
+          <div class="resume-item">
+            <h4>Freelancing</h4>
+            <h5>2017 - present</h5>
+            <p><em>Chattogram, Bangladesh</em></p>
+            <p>
+            <ul>
+              <li>Data Entry, Lead Generation, Virtual Assistance etc.</li>
+              <li>100% accuracy, On time Delivery.</li>
+            </ul>
+            </p>
+          </div>
           <div class="resume-item">
             <h4>Web development in django</h4>
             <h5>2019 - Present</h5>
