--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Rubelliumm...</title>
-  <meta content="Hello, I'm Rubel Hossain. I'm a self learner,freelancer and technology enthusiast. Currently learning about SPYWARE." name="description">
-  <meta content="Rubelliumm, rubelliumm, Rubel Hossain, rubel hossain, Rubel hossain, রুবেল, রুবেল হোসেন, রুবেলিয়াম," name="keywords">
+  <meta
+    content="Hello, I'm Rubel Hossain. I'm a self learner,freelancer and technology enthusiast. Currently learning about SPYWARE."
+    name="description">
+  <meta content="Rubelliumm, rubelliumm, Rubel Hossain, rubel hossain, Rubel hossain, রুবেল, রুবেল হোসেন, রুবেলিয়াম,"
+    name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +43,7 @@
       <h1><a href="index.html">Md. Rubel Hossain</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>Hello there, I'm  <span><a href="index.html">Rubel Hossain</a></span></span> from Chattogram, Bangladesh.</h2>
+      <h2>Hello there, I'm <span><a href="index.html">Rubel Hossain</a></span></span> from Chattogram, Bangladesh.</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -86,7 +91,8 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>28 november ****</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>portfolio-rubelliumm.herokuapp.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
+                  <span>portfolio-rubelliumm.herokuapp.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+880 183 2222 758</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Chattogram, Bangladesh</span></li>
               </ul>
@@ -101,7 +107,7 @@
             </div>
           </div>
           <p>
-           please feel free to ask me anything.I would love to help you.Thank you.
+            please feel free to ask me anything.I would love to help you.Thank you.
           </p>
         </div>
       </div>
@@ -446,13 +452,13 @@
 
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter.js"></script>
+  <!-- <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script> -->
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
