added cert and projects page

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
           <li><a class="nav-link" href="#resume"><b>Resume</b></a></li>
           <li><a class="nav-link" href="#services"><b>Photo Galary</b></a></li>
           <li><a class="nav-link" href="#contact"><b>Contact</b></a></li>
+          <li><a class="nav-link" href="./projects.html"><b>Projects</b></a></li>
+          <li><a class="nav-link" href="./certificates.html"><b>Certificates</b></a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -92,7 +94,8 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>28 november ****</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
-                  <span>portfolio-rubelliumm.herokuapp.com</span></li>
+                  <span>portfolio-rubelliumm.herokuapp.com</span>
+                </li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+880 183 2222 758</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Chattogram, Bangladesh</span></li>
               </ul>
